# research-copilot

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
infra/: docker-compose.yml
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: main.py
