[project]
name = "research-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.116.2",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "ruff>=0.13.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
  \.venv
| \.git
| \.mypy_cache
| \.ruff_cache
| node_modules
| dist
)/
'''
